--- a/backend/.env
+++ b/backend/.env
@@ -1,32 +1,36 @@
-# Server
+# ===== Server =====
 PORT=4000
 BASE_URL=http://localhost:4000
-
-# Frontend (where you'll redirect after auth)
 FRONTEND_URL=http://localhost:5173
 
-# JWT
-JWT_SECRET=replace_with_a_strong_secret
+SESSION_SECRET=supersecretkey123
+
+JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRES_IN=1h
 
-# Google
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
-GOOGLE_CALLBACK=/auth/google/callback
 
-# GitHub
-GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_client_secret
-GITHUB_CALLBACK=/auth/github/callback
+# ===== GOOGLE =====
+GOOGLE_CLIENT_ID=your_google_id
+GOOGLE_CLIENT_SECRET=your_google_secret
+GOOGLE_CALLBACK=http://localhost:4000/auth/google/callback
 
-# Microsoft / Outlook
-MICROSOFT_CLIENT_ID=your_microsoft_client_id
-MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret
-MICROSOFT_CALLBACK=/auth/microsoft/callback
 
-# Apple (optional)
+# ===== GITHUB =====
+GITHUB_CLIENT_ID=your_github_id
+GITHUB_CLIENT_SECRET=your_github_secret
+GITHUB_CALLBACK=http://localhost:4000/auth/github/callback
+
+
+# ===== MICROSOFT / OUTLOOK =====
+MICROSOFT_CLIENT_ID=your_microsoft_id
+MICROSOFT_CLIENT_SECRET=your_microsoft_secret
+MICROSOFT_CALLBACK=http://localhost:4000/auth/microsoft/callback
+MICROSOFT_TENANT=common
+
+
+# ===== APPLE (optional) =====
 APPLE_CLIENT_ID=com.your.app
-APPLE_TEAM_ID=YOUR_TEAM_ID
-APPLE_KEY_ID=KEY_ID_FROM_DEVELOPER_PORTAL
+APPLE_TEAM_ID=teamid
+APPLE_KEY_ID=keyid
 APPLE_PRIVATE_KEY_PATH=./AuthKey_KEYID.p8
-APPLE_CALLBACK=/auth/apple/callback
+APPLE_CALLBACK=http://localhost:4000/auth/apple/callback
